--- a/src/main/webapp/pages/CXCodeList/CXCodeList.html
+++ b/src/main/webapp/pages/CXCodeList/CXCodeList.html
@@ -10,6 +10,11 @@
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn9" padding="2em unset">
+                        <wm-label padding="unset 0.5em" name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-livegrid formlayout="dialog" name="livegridCodeList">
@@ -27,28 +32,32 @@
                                 <wm-layoutgrid columns="1" name="layoutgrid2">
                                     <wm-gridrow name="gridrow8">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn8">
-                                            <wm-form-field name="codeSets" displayname="Code Set" required="false" show="true" generator="assigned" primary-key="false" key="codeSets" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select" dataset="bind:Variables.lvCurrentCodeSetObj.dataSet"
-                                            datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvCurrentCodeSetObj.firstRecord" disabled="true"></wm-form-field>
+                                            <wm-form-field name="codeSets" displayname="Code Set" required="false" show="true" generator="assigned" primary-key="false" key="codeSets" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"
+                                            dataset="bind:Variables.lvCurrentCodeSetObj.dataSet" datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvCurrentCodeSetObj.firstRecord" disabled="true"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow4">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                                            <wm-form-field name="codeNumber" displayname="Code Number" required="true" show="true" generator="assigned" primary-key="false" key="codeNumber" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="codeNumber" displayname="Code Number" required="true" show="true" generator="assigned" primary-key="false" key="codeNumber" type="string" is-related="false" maxchars="255" pc-display="true"
+                                            mobile-display="true" widget="text"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                            <wm-form-field name="codeTitle" displayname="Code Title" required="true" show="true" generator="assigned" primary-key="false" key="codeTitle" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="codeTitle" displayname="Code Title" required="true" show="true" generator="assigned" primary-key="false" key="codeTitle" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                            widget="text"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow6">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                                            <wm-form-field name="code" displayname="Code" required="true" show="true" generator="assigned" primary-key="false" key="code" type="text" is-related="false" maxchars="5000" pc-display="true" mobile-display="true" widget="textarea"></wm-form-field>
+                                            <wm-form-field name="code" displayname="Code" required="true" show="true" generator="assigned" primary-key="false" key="code" type="text" is-related="false" maxchars="5000" pc-display="true" mobile-display="true"
+                                            widget="textarea"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn7">
-                                            <wm-form-field name="activeYn" displayname="Active" required="false" show="true" generator="assigned" primary-key="false" key="activeYn" type="boolean" is-related="false" defaultvalue="true" pc-display="true" mobile-display="true" widget="checkbox"></wm-form-field>
+                                            <wm-form-field name="activeYn" displayname="Active" required="false" show="true" generator="assigned" primary-key="false" key="activeYn" type="boolean" is-related="false" defaultvalue="true" pc-display="true" mobile-display="true"
+                                            widget="checkbox"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
