updated header formatting to match the header on EditForm Files modified - [CXCodeList.html,MunicipalityCodeList.variables.json,MunicipalityCodeList.html]

--- a/src/main/webapp/pages/CXCodeList/CXCodeList.html
+++ b/src/main/webapp/pages/CXCodeList/CXCodeList.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn9" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle"></wm-label>
+                        <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
