--- a/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
+++ b/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8_1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle + ' (' + Variables.lvCurrentCodeSetObj.dataSet.data[$i].municipalities.municipalityName + ')'"></wm-label>
+                        <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle + ' (' + Variables.lvCurrentCodeSetObj.dataSet.data[$i].municipalities.municipalityName + ')'"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
