- Field editor now available on the EditInspection page Files modified - [cx2_published_dataModel.json,FormController.java,FormService.java,dynamicFieldEditor.variables.json,EditInspection.html,EditInspection.variables.json,InspectionDesign.java,pom.xml]

--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -311,7 +311,11 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneFields" title="Fields"></wm-tabpane>
+                            <wm-tabpane name="tabpaneFields" title="Fields">
+                                <wm-container name="container1" content="dynamicFieldEditor">
+                                    <wm-param name="inspectionDesignId" value="bind:pageParams.InspectionDesignId" type="integer"></wm-param>
+                                </wm-container>
+                            </wm-tabpane>
                             <wm-tabpane name="tabpaneOutcomes" title="Outcomes">
                                 <wm-layoutgrid name="layoutgrid12">
                                     <wm-gridrow name="gridrow41">
