Minor Tweaks Files modified - [CodeEnforcementDashboard.html]

--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -35,7 +35,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn19" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_OpenCases.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow8_1">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn20_1" class="col-xs-3">
@@ -50,7 +50,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ClosedCases.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid7">
                                 <wm-gridrow height="100%" name="gridrow11_1">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
