- updated CXCodeList header - added VIOLATIONS tab to ViewInspection to complete #1298 - updated VIOLATIONS tab on Forms page to match other tabs for #1298 Files modified - [ManageInspections.variables.json,CXCodeList.variables.json,CXCodeList.html,MunicipalityCodeList.variables.json,pom.xml,Forms.html,ViewInspection.html]

--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -106,6 +106,7 @@
                                 <wm-tabpane name="tabpaneInspections" title="INSPECTION" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneLocation" title="LOCATION" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneAttachments" title="ATTACHMENTS" show="true"></wm-tabpane>
+                                <wm-tabpane name="tabpaneVIOLATIONS" title="VIOLATIONS"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFORMS" title="FORMS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFees" title="FEES" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneCodeEnforment" title="CODE ENFORCEMENT" show="true"></wm-tabpane>
