--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -259,10 +259,9 @@
                                                         <wm-grid-column binding="usersBySharedWithUser.fullName" caption="Name" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
                                                         <wm-grid-column binding="usersBySharedWithUser.email" caption="Email Address" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true"
                                                         related-entity-name="Users"></wm-grid-column>
-                                                        <wm-grid-column binding="createdOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
-                                                        filterwidget="date" readonly="false"></wm-grid-column>
-                                                        <wm-grid-column binding="usersByCreatedBy.fullName" caption="Added By" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true"
-                                                        related-entity-name="Users"></wm-grid-column>
+                                                        <wm-grid-column binding="createdOn" caption="Date Added" type="timestamp" generator="assigned" edit-widget-type="timestamp" show="true" filterwidget="date" readonly="false">{{row.getProperty('createdOn') | toLocalDateString:true}}</wm-grid-column>
+                                                        <wm-grid-column binding="usersByCreatedBy.fullName" caption="Added By" type="string" primary-key="false" generator="assigned"
+                                                        readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="Add User" show="bind:Variables.svUserPermissions.dataSet.canView" class="btn-primary" iconclass="wi wi-plus" title="Add User" action="addNewRow()"
                                                         shortcutkey="" disabled="false"></wm-grid-action>
@@ -469,12 +468,13 @@
                                         <wm-gridrow name="gridrow69">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn143">
                                                 <wm-grid title="" dataset="bind:Variables.FormHistoryData.dataSet" navigation="Classic" name="grid3" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
-                                                    <wm-grid-column binding="createdTime" caption="Date Modified" type="timestamp" width="20%" generator="assigned" readonly="true" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="text"></wm-grid-column>
-                                                    <wm-grid-column binding="formStatusesByOldStatusId.status" caption="Previous Status" type="string" width="10%" generator="assigned" readonly="true" show="true" related-entity-name="FormStatuses"></wm-grid-column>
-                                                    <wm-grid-column binding="formStatusesByNewStatusId.status" caption="New Status" type="string" width="10%" generator="assigned" readonly="true" show="true" related-entity-name="FormStatuses"></wm-grid-column>
-                                                    <wm-grid-column binding="users.fullName" caption="Performed By" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                                    <wm-grid-column binding="users.email" caption="Email Address" type="string" width="20%" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                                    <wm-grid-column binding="comments" caption="Notes" type="string" width="20%" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                                                    <wm-grid-column binding="createdTime" caption="Date Created" type="timestamp" width="20%" generator="assigned" readonly="true" edit-widget-type="timestamp" show="true" filterwidget="text">{{row.getProperty('createdTime') | toLocalDateString:true}}</wm-grid-column>
+                                                    <wm-grid-column binding="formStatusesByOldStatusId.status" caption="Previous Status" type="string" width="10%" generator="assigned"
+                                                    readonly="true" edit-widget-type="text" show="true" related-entity-name="FormStatuses"></wm-grid-column>
+                                                    <wm-grid-column binding="formStatusesByNewStatusId.status" caption="New Status" type="string" width="10%" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormStatuses"></wm-grid-column>
+                                                    <wm-grid-column binding="users.fullName" caption="Performed By" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                                    <wm-grid-column binding="users.email" caption="Email Address" type="string" width="20%" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                                    <wm-grid-column binding="comments" caption="Notes" type="string" width="20%" generator="assigned" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 </wm-grid>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
